--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,9 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import math"
+    "import math\n",
+    "from PIL import Image\n",
+    "import random"
    ]
   },
   {
@@ -168,7 +170,7 @@
     "    data=data.copy()\n",
     "    positive=every_x_frame(data,x)\n",
     "    negative=negative_frames(data,x)\n",
-    "    return {\"pos\":positive, \"neg\":negative}\n",
+    "    return [positive,negative]\n",
     "\n",
     "# generates positive and negative tests for x frames\n",
     "def gen_every_x_frames_skip(data,step=2,x=5):\n",
@@ -179,44 +181,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                                                       0\n",
-       "0      [[00138375.png, /media/Data/backwards_detectio...\n",
-       "1      [[00138365.png, /media/Data/backwards_detectio...\n",
-       "2      [[00138355.png, /media/Data/backwards_detectio...\n",
-       "3      [[00138345.png, /media/Data/backwards_detectio...\n",
-       "4      [[00138335.png, /media/Data/backwards_detectio...\n",
-       "...                                                  ...\n",
-       "27669  [[00108565.png, /media/Data/backwards_detectio...\n",
-       "27670  [[00132885.png, /media/Data/backwards_detectio...\n",
-       "27671  [[00021037.png, /media/Data/backwards_detectio...\n",
-       "27672  [[00138337.png, /media/Data/backwards_detectio...\n",
-       "27673  [[00069115.png, /media/Data/backwards_detectio...\n",
-       "\n",
-       "[27674 rows x 1 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>[[00138375.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>[[00138365.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>[[00138355.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>[[00138345.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>[[00138335.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>27669</th>\n      <td>[[00108565.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>27670</th>\n      <td>[[00132885.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>27671</th>\n      <td>[[00021037.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>27672</th>\n      <td>[[00138337.png, /media/Data/backwards_detectio...</td>\n    </tr>\n    <tr>\n      <th>27673</th>\n      <td>[[00069115.png, /media/Data/backwards_detectio...</td>\n    </tr>\n  </tbody>\n</table>\n<p>27674 rows × 1 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def trainning_dataset():\n",
-    "    dataset=[]\n",
+    "def trainning_data_set_gen():\n",
+    "    data_set_pos=[]\n",
+    "    data_set_neg=[]\n",
     "    for trainning in trainning_data_set:\n",
     "        # generate cases for 5 images and a skip of 2\n",
-    "        dataset.append(gen_every_x_frames_skip(trainning))\n",
-    "    return dataset\n",
-    "pd.DataFrame(trainning_dataset()[0][\"neg\"])"
+    "        positive, negative=gen_every_x_frames_skip(trainning)\n",
+    "        data_set_pos=data_set_pos+positive\n",
+    "        data_set_neg=data_set_neg+negative\n",
+    "    return data_set_pos,data_set_neg\n",
+    "def test_data_set_gen():\n",
+    "    data_set_pos=[]\n",
+    "    data_set_neg=[]\n",
+    "    for test in test_data_set:\n",
+    "        # generate cases for 5 images and a skip of 2\n",
+    "        positive, negative=gen_every_x_frames_skip(test)\n",
+    "        data_set_pos=data_set_pos+positive\n",
+    "        data_set_neg=data_set_neg+negative\n",
+    "    return data_set_pos,data_set_neg\n",
+    "\n",
+    "def pick_x_amount(data,x):\n",
+    "    return random.sample(data,x)\n",
+    "\n",
+    "def open_images_prep_keras(posData, negData, limit, random=True):\n",
+    "    # take positive and negative data and limit\n",
+    "    if random:\n",
+    "        posData=pick_x_amount(posData,limit)\n",
+    "        negData=pick_x_amount(negData,limit)\n",
+    "    else:\n",
+    "        posData=posData[0:limit]\n",
+    "        negData=negData[0:limit]\n",
+    "    # image_paths Y\n",
+    "    data_set=[]\n",
+    "    for pos_images in posData:\n",
+    "        image_paths=[]\n",
+    "        for image in pos_images:\n",
+    "            image_paths.append(image[1]+image[0])\n",
+    "        xy=[image_paths,1]\n",
+    "        data_set.append(xy)\n",
+    "    for neg_images in negData:\n",
+    "        image_paths=[]\n",
+    "        for image in neg_images:\n",
+    "            image_paths.append(image[1]+image[0])\n",
+    "        xy=[image_paths,0]\n",
+    "        data_set.append(xy)\n",
+    "    data_set=np.array(data_set)\n",
+    "    np.random.shuffle(data_set)\n",
+    "    for data in data_set:\n",
+    "        image_data=[]\n",
+    "        for image_path in data[0]:\n",
+    "            image_data.append(np.array(Image.open(image_path))/255)\n",
+    "        yield np.array([np.array(image_data),np.array(data[1])])\n",
+    "\n",
+    "def trainning_images_gen():\n",
+    "    keras_trainning_data_set_pos, keras_trainning_data_set_neg= trainning_data_set_gen()\n",
+    "    return open_images_prep_keras(keras_trainning_data_set_pos,keras_trainning_data_set_neg,1)\n",
+    "trainning_images_gen()\n",
+    "\n",
+    "def test_images_gen():\n",
+    "    keras_test_data_set_pos, keras_test_data_set_neg= test_data_set_gen()\n",
+    "    return open_images_prep_keras(keras_test_data_set_pos,keras_test_data_set_neg,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert input to output\n",
+    "def start_of_cnn():\n",
+    "    image_input=tf.keras.layers.Input(shape=(800,1920,3))\n",
+    "    x=tf.keras.layers.Conv2D(filters=50,kernel_size=[3,3],activation='relu',padding='valid')(image_input)\n",
+    "    x=tf.keras.layers.MaxPooling2D()(x)\n",
+    "    x=tf.keras.layers.Dropout(.1)(x)\n",
+    "    x=tf.keras.layers.Conv2D(filters=25,kernel_size=[3,3],activation='relu',padding='valid')(x)\n",
+    "    x=tf.keras.layers.MaxPooling2D()(x)\n",
+    "    x=tf.keras.layers.Dropout(.1)(x)\n",
+    "    x=tf.keras.layers.Conv2D(filters=25,kernel_size=[3,3],activation='relu',padding='valid')(x)\n",
+    "    x=tf.keras.layers.MaxPooling2D()(x)\n",
+    "    x=tf.keras.layers.Dropout(.1)(x)\n",
+    "    x=tf.keras.layers.Conv2D(filters=25,kernel_size=[3,3],activation='relu',padding='valid')(x)\n",
+    "    x=tf.keras.layers.MaxPooling2D()(x)\n",
+    "    x=tf.keras.layers.Dropout(.1)(x)\n",
+    "    # x=tf.keras.Model(inputs=image_input,outputs=x) #(None, 48, 118, 25) \n",
+    "    return image_input,x\n",
+    "inputs=[]\n",
+    "combine_layers=[]\n",
+    "for _ in range(5):\n",
+    "    \n",
+    "combined=tf.keras.layers.concatenate(axis=1,inputs=[start_of_cnn(),start_of_cnn()])\n",
+    "x=tf.keras.layers.Dense(200, activation=\"relu\")(combined)\n",
+    "x=tf.keras.layers.Dense(200, activation=\"relu\")(x)\n",
+    "x=tf.keras.layers.Dense(1, activation=\"softmax\")(x)\n",
+    "# x=tf.keras.Model(inputs=image_input,outputs=x)"
    ]
   }
  ]
